--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,10 @@ nvidia-graphics-drivers (387.12-1~svn1) UNRELEASED; urgency=medium
       override this default behavior and allow interlaced modes over
       DisplayPort protocol anyway.
 
+  [ Luca Boccassi ]
+  * Update d/copyright with new 6.3 paragraph in Nvidia's license, which warns
+    that the drivers are licensed for usage with Nvidia hardware.
+
  -- Luca Boccassi <bluca@debian.org>  Sat, 14 Oct 2017 14:34:12 +0100
 
 nvidia-graphics-drivers (384.90-1) experimental; urgency=medium
