Refresh patches for 387.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/387@7564 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,8 @@ nvidia-graphics-drivers (387.12-1~svn1) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Update d/copyright with new 6.3 paragraph in Nvidia's license, which warns
     that the drivers are licensed for usage with Nvidia hardware.
+  * Drop nvidia-drm-crtc.patch, fixed upstream, and refresh
+    nvidia-drm-master-dev.patch and use-kbuild-compiler.patch to remove fuzz.
 
  -- Luca Boccassi <bluca@debian.org>  Sat, 14 Oct 2017 14:34:12 +0100
 
