Update symbols files with changes from 387.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/387@7566 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,7 @@ nvidia-graphics-drivers (387.12-1~svn1) UNRELEASED; urgency=medium
     nvidia-drm-master-dev.patch and use-kbuild-compiler.patch to remove fuzz.
   * Adjust filenames for new minor ABI revision of libnvidia-egl-wayland1
     (libnvidia-egl-wayland.so.1.0.1 -> libnvidia-egl-wayland.so.1.0.2).
+  * Update symbols files.
 
  -- Luca Boccassi <bluca@debian.org>  Sat, 14 Oct 2017 14:34:12 +0100
 
