--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (375.82-6~svn1) UNRELEASED; urgency=medium
+
+  * Add use-kbuild-gcc-plugins.patch to fix kernel module build failure
+    when the kernel is built with CONFIG_GCC_PLUGIN*. (Closes: #878677)
+
+ -- Luca Boccassi <bluca@debian.org>  Sun, 15 Oct 2017 22:16:51 +0100
+
 nvidia-graphics-drivers (375.82-5) unstable; urgency=medium
 
   [ Andreas Beckmann ]
