--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ nvidia-graphics-drivers (375.82-6~svn1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Provide libglvnd package names, mesa 17.x is now in testing.
     (Closes: #876766)
+  * Do not provide libglvnd package names where the NVIDIA provided binaries
+    are missing symbols w.r.t. to the libglvnd packages.  (Closes: #879264)
 
  -- Luca Boccassi <bluca@debian.org>  Sun, 15 Oct 2017 22:16:51 +0100
 
