--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (375.82-6~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (375.82-6) unstable; urgency=high
 
   [ Luca Boccassi ]
   * Add use-kbuild-gcc-plugins.patch to fix kernel module build failure
@@ -10,7 +10,7 @@ nvidia-graphics-drivers (375.82-6~svn1) UNRELEASED; urgency=medium
   * Do not provide libglvnd package names where the NVIDIA provided binaries
     are missing symbols w.r.t. to the libglvnd packages.  (Closes: #879264)
 
- -- Luca Boccassi <bluca@debian.org>  Sun, 15 Oct 2017 22:16:51 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 25 Oct 2017 13:43:16 +0200
 
 nvidia-graphics-drivers (375.82-5) unstable; urgency=medium
 
