--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (384.90-2) UNRELEASED; urgency=medium
+
+  * libcuda1: Add Provides: libcuda-9.0-1{,-i386}.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 25 Oct 2017 14:22:06 +0200
+
 nvidia-graphics-drivers (384.90-1) experimental; urgency=medium
 
   * New upstream long lived branch release 384.90 (2017-09-21).
