--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (375.82-7) UNRELEASED; urgency=medium
+
+  * Use debian/substvars for substitutions by dpkg-genchanges (dpkg 1.19).
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 29 Oct 2017 16:20:58 +0100
+
 nvidia-graphics-drivers (375.82-6) unstable; urgency=high
 
   [ Luca Boccassi ]
