use Conflicts instead of Breaks
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7578 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 nvidia-graphics-drivers (375.82-7) UNRELEASED; urgency=medium
 
+  * Use Conflicts+Replaces+Provides on the provided libglvnd package names,
+    Breaks does not work for M-A: same packages.  (Closes: #879821)
   * Use debian/substvars for substitutions by dpkg-genchanges (dpkg 1.19).
   * nvidia-detect: Detect devices in PCI classes 0301 (XGA compatible
     controller) and 0302 (3D controller), too.  (Closes: #879792)
