Refresh nvidia-use-ARCH.o_binary.patch to remove fuzz from 387.22
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/387@7588 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -85,6 +85,7 @@ nvidia-graphics-drivers (387.22-1~svn1) UNRELEASED; urgency=medium
     (libnvidia-egl-wayland.so.1.0.1 -> libnvidia-egl-wayland.so.1.0.2).
   * Update symbols files.
   * Update nv-readme.ids.
+  * Refresh nvidia-use-ARCH.o_binary.patch to remove fuzz from 387.22.
 
  -- Luca Boccassi <bluca@debian.org>  Sat, 14 Oct 2017 14:34:12 +0100
 
