do not provide libglvnd package names at all
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7609 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (375.82-8) UNRELEASED; urgency=medium
 
-  * Switch most URLs to https://
+  * Do not provide libglvnd package names at all.
+  * Use https:// URLs where possible.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 01 Nov 2017 12:48:59 +0100
 
