--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (384.98-1~svn1) UNRELEASED; urgency=medium
       NVLink speed.
     - Fixed a bug that caused incorrect PCI topology reporting in nvidia-smi
       on Intel Skylake systems.
+  * Update nv-readme.ids.
 
  -- Luca Boccassi <bluca@debian.org>  Sun, 05 Nov 2017 13:53:59 +0000
 
