--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ nvidia-graphics-drivers (384.98-1~svn1) UNRELEASED; urgency=medium
     - Fixed a bug that caused incorrect PCI topology reporting in nvidia-smi
       on Intel Skylake systems.
   * Update nv-readme.ids.
+  * Drop nvidia-drm-master-dev.patch and nvidia-drm-crtc.patch, issues fixed
+    upstream.
 
  -- Luca Boccassi <bluca@debian.org>  Sun, 05 Nov 2017 13:53:59 +0000
 
