--- a/debian/changelog
+++ b/debian/changelog
@@ -63,7 +63,7 @@ nvidia-graphics-drivers (304.137-1~svn4deb7wheezy) UNRELEASED; urgency=medium
   * bug-control: Add arch qualification to M-A:same packages in report-with
     list otherwise reportbug will ignore them if more than one is installed
     (375.82-5).
-  * Switch most URLs to https://
+  * Use https:// URLs where possible (375.82-8).
 
   [ Luca Boccassi ]
   * Switch to my debian.org email address in Uploaders.
