--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers (384.98-1~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (384.98-1) experimental; urgency=medium
 
   * New upstream long lived branch release 384.98 (2017-11-02).
-    - Added support for the following GPUs: P104-101, P106-090, Tesla
-      V100-SXM2-16GB, Tesla V100-PCIE-16GB
+    - Added support for the following GPUs: P104-101, P106-090,
+      Tesla V100-SXM2-16GB, Tesla V100-PCIE-16GB.
     - Fixed a bug that could cause some eDP G-SYNC displays to flicker at low
       refresh rates.
     - Fixed a bug that could cause OpenGL applications to crash after a
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (384.98-1~svn1) UNRELEASED; urgency=medium
       NVLink speed.
     - Fixed a bug that caused incorrect PCI topology reporting in nvidia-smi
       on Intel Skylake systems.
+    * Improved compatibility with recent Linux kernels.
 
   [ Luca Boccassi ]
   * Update nv-readme.ids.
@@ -24,7 +25,7 @@ nvidia-graphics-drivers (384.98-1~svn1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Merge changes from 375.82-8.
 
- -- Luca Boccassi <bluca@debian.org>  Sun, 05 Nov 2017 13:53:59 +0000
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 07 Nov 2017 22:04:04 +0100
 
 nvidia-graphics-drivers (384.90-2) experimental; urgency=medium
 
