Rules-Requires-Root: no
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7649 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ nvidia-graphics-drivers (304.137-1~svn4deb9stretch) UNRELEASED; urgency=medium
   * nvidia-detect: Detect devices in PCI classes 0301 (XGA compatible
     controller) and 0302 (3D controller), too (375.82-7).
   * bug-script: List these devices, too (375.82-7).
+  * Set Rules-Requires-Root: no.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 02:02:40 +0200
 
