finalize changelog for nvidia-graphics-drivers (378.13-3), upload to unstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/378@7677 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-graphics-drivers (378.13-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (378.13-3) unstable; urgency=medium
 
   * Merge changes from 375.82-9.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Sep 2017 18:25:57 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 27 Nov 2017 16:29:16 +0100
 
 nvidia-graphics-drivers (378.13-2) experimental; urgency=medium
 
