--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-graphics-drivers (381.22-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (381.22-3) unstable; urgency=medium
 
   * Merge changes from 378.13-3.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 28 Nov 2017 02:08:44 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 28 Nov 2017 17:17:35 +0100
 
 nvidia-graphics-drivers (381.22-2) experimental; urgency=medium
 
