--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (384.98-2) UNRELEASED; urgency=medium
 
   * Merge changes from 381.22-3.
+  * Restrict watch file to releases from the 384.xx long lived branch.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 28 Nov 2017 18:51:26 +0100
 
