--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-nvidia-graphics-drivers (384.98-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (384.98-2) unstable; urgency=medium
 
   * Merge changes from 381.22-3.
   * Restrict watch file to releases from the 384.xx long lived branch.
   * Fix circular dependency between stamp and generated nvidia_icd.json.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 28 Nov 2017 18:51:26 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 30 Nov 2017 07:29:38 +0100
 
 nvidia-graphics-drivers (384.98-1) experimental; urgency=medium
 
