fix libnvidia-ptxjitcompiler.so.1 alternative link
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7698 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (384.98-3) unstable; urgency=medium
+
+  * Fix libnvidia-ptxjitcompiler.so.1 alternative link.  (Closes: #883303)
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 02 Dec 2017 21:50:28 +0100
+
 nvidia-graphics-drivers (384.98-2) unstable; urgency=medium
 
   * Merge changes from 381.22-3.
