--- a/debian/changelog
+++ b/debian/changelog
@@ -85,6 +85,9 @@ nvidia-graphics-drivers (387.34-1~svn1) UNRELEASED; urgency=medium
   * Update nv-readme.ids.
   * Refresh nvidia-use-ARCH.o_binary.patch to remove fuzz from 387.22.
 
+  [ Andreas Beckmann ]
+  * Update lintian overrides.
+
  -- Luca Boccassi <bluca@debian.org>  Sat, 14 Oct 2017 14:34:12 +0100
 
 nvidia-graphics-drivers (384.98-3) unstable; urgency=medium
