--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (387.34-1~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (387.34-1) experimental; urgency=medium
 
   * New upstream short lived branch release 387.34 (2017-11-24).
     - Fixed a bug that caused Vulkan X11 swapchains to fail on GPUs without a
@@ -87,8 +87,9 @@ nvidia-graphics-drivers (387.34-1~svn1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Update lintian overrides.
+  * Upload to experimental.
 
- -- Luca Boccassi <bluca@debian.org>  Sat, 14 Oct 2017 14:34:12 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 07 Dec 2017 01:57:08 +0100
 
 nvidia-graphics-drivers (384.98-3) unstable; urgency=medium
 
