--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nvidia-graphics-drivers (384.98-4) UNRELEASED; urgency=medium
+
+  * Support easier and consistent switching between GLVND/non-GLVND variants.
+  * nvidia-driver-libs{,-i386}: Depend only on the GLVND variants.
+  * nvidia-driver-libs-nonglvnd{,-i386}: New metapackages depending only on
+    the non-GLVND variants.  (Closes: #864497)
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Dec 2017 20:15:00 +0100
+
 nvidia-graphics-drivers (384.98-3) unstable; urgency=medium
 
   * Fix libnvidia-ptxjitcompiler.so.1 alternative link.  (Closes: #883303)
