--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (387.34-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (387.34-2) experimental; urgency=medium
 
   * Support easier and consistent switching between GLVND/non-GLVND variants.
   * nvidia-driver-libs{,-i386}: Depend only on the GLVND variants.
@@ -10,7 +10,7 @@ nvidia-graphics-drivers (387.34-2) UNRELEASED; urgency=medium
   * Add #tls# substitution for the tls/ source directory.
   * Bump Standards-Version to 4.1.2. No changes needed.
 
- -- Andreas Beckmann <anbe@debian.org>  Mon, 18 Dec 2017 03:11:00 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 18 Dec 2017 04:49:57 +0100
 
 nvidia-graphics-drivers (387.34-1) experimental; urgency=medium
 
