--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,15 @@
-nvidia-graphics-drivers (384.98-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (384.111-1~svn1) UNRELEASED; urgency=medium
 
+  * New upstream long lived branch release 384.111 (2018-01-04).
+    - Added support for the following GPUs: GeForce MX130, GeForce MX110,
+      GeForce GTX 1050 Ti with Max-Q Design, Quadro P500
+    - Fixed a regression that prevented displays connected via some types of
+      passive adapters (e.g. DMS-59 to VGA or DVI) from working correctly.
+      The regression was introduced with driver version 384.98.
+    - Fixed a bug that caused Quadro M2200 GPUs to enter the lowest available
+      PowerMizer performance level when under load.
+
+  [ Andreas Beckmann ]
   * Support easier and consistent switching between GLVND/non-GLVND variants.
   * nvidia-driver-libs{,-i386}: Depend only on the GLVND variants.
   * nvidia-driver-libs-nonglvnd{,-i386}: New metapackages depending only on
