--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ nvidia-graphics-drivers (384.111-1~svn1) UNRELEASED; urgency=medium
   * Add #tls# substitution for the tls/ source directory.
   * Bump Standards-Version to 4.1.2. No changes needed.
 
+  [ Luca Boccassi ]
+  * Update nv-readme.ids.
+
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Dec 2017 20:15:00 +0100
 
 nvidia-graphics-drivers (384.98-3) unstable; urgency=medium
