--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ nvidia-graphics-drivers (384.111-1~svn1) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Update nv-readme.ids.
   * Update symbols files.
+  * nvidia-kernel-dkms: add dependency to libelf-dev [amd64] to fix kernel
+    modules builds failures due to new config used by the kernel.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Dec 2017 20:15:00 +0100
 
