--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,38 @@
+nvidia-graphics-drivers (390.12-1~svn1) UNRELEASED; urgency=medium
+
+  * New upstream beta 390.12 (2018-01-04).
+    - Added new application profile settings, "EGLVisibleDGPUDevices" and
+      "EGLVisibleTegraDevices", to control which discrete and Tegra GPU
+      devices, respectively, may be enumerated by EGL. See the "Application
+      Profiles" appendix of the driver README for more details.
+    - Corrected the SONAME of the copy of the libnvidia-egl-wayland library
+      included in the .run installer package to libnvidia-egl-wayland.so.1.
+      The SONAME had previously been versioned incorrectly with the full
+      version number of the library.
+    - Updated nvidia.ko to veto the ACPI_VIDEO_NOTIFY_PROBE event on
+      kernels that allow the handler for this event to be overridden,
+      to improve interaction between the NVIDIA driver and acpi_video
+      on display hotplug events.
+    - Updated the SLI Mosaic layout page in the nvidia-settings control
+      panel to support topologies with up to 32 displays.
+    - Fixed a bug that prevented Xinerama Info from being handled properly
+      in SLI or Base Mosaic layouts with more than 24 displays.
+    - Updated the X driver's composition pipeline (used for rotation,
+      warp and blend, transformation matrices, etc) to also support stereo.
+    - Added an OpenGL stereo preview feature to the screen page in
+      nvidia-settings.
+    - Fixed a bug where GetTexSubImage() would read incorrect data into
+      a pixel buffer object when supplied with a target of
+      GL_TEXTURE_1D_ARRAY and a non-zero yoffset value.
+    - Added support for generic active stereo with in-band DisplayPort
+      signaling. The X configuration option "InbandStereoSignaling" is
+      deprecated in favor of this stereo mode. See "Appendix B. X Config
+      Options" in the README for more information.
+    - Modified the driver to avoid restoring framebuffer console modes
+      on virtual reality head-mounted displays.
+
+ -- Luca Boccassi <bluca@debian.org>  Thu, 04 Jan 2018 23:05:11 +0000
+
 nvidia-graphics-drivers (387.34-2) experimental; urgency=medium
 
   * Support easier and consistent switching between GLVND/non-GLVND variants.
