--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ nvidia-graphics-drivers (390.12-1~svn1) UNRELEASED; urgency=medium
       Options" in the README for more information.
     - Modified the driver to avoid restoring framebuffer console modes
       on virtual reality head-mounted displays.
+  * Update nv-readme.ids.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 04 Jan 2018 23:05:11 +0000
 
