Update symbols files for 390.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/390@7736 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ nvidia-graphics-drivers (390.12-1~svn1) UNRELEASED; urgency=medium
     - Modified the driver to avoid restoring framebuffer console modes
       on virtual reality head-mounted displays.
   * Update nv-readme.ids.
+  * Update symbols files.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 04 Jan 2018 23:05:11 +0000
 
