--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ nvidia-graphics-drivers (390.12-1~svn1) UNRELEASED; urgency=medium
       on virtual reality head-mounted displays.
   * Update nv-readme.ids.
   * Update symbols files.
+  * Update lintian overrides.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 04 Jan 2018 23:05:11 +0000
 
