Add dependency to libelf-dev in nvidia-kernel-dkms (amd64)
 /usr/src/linux-headers-4.15.0-rc5-common/Makefile:927:
  *** "Cannot generate ORC metadata for CONFIG_UNWINDER_ORC=y,
  please install libelf-dev, libelf-devel or elfutils-libelf-devel".

Appears only on amd64 for now with kernel 4.15 from experimental.

Note that the build for 4.15 then still fails due to #886366, manually
creating a symlink is necessary as a workaround:

sudo ln -sr /usr/src/linux-kbuild-4.15/tools /usr/src/linux-headers-`uname -r`/


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/390@7738 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,8 @@ nvidia-graphics-drivers (390.12-1~svn1) UNRELEASED; urgency=medium
   * Update nv-readme.ids.
   * Update symbols files.
   * Update lintian overrides.
+  * nvidia-kernel-dkms: add dependency to libelf-dev [amd64] to fix kernel
+    modules builds failures due to new config used by the kernel.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 04 Jan 2018 23:05:11 +0000
 
