Close 886470 in d/changelog
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7739 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (384.111-1~svn1) UNRELEASED; urgency=medium
       The regression was introduced with driver version 384.98.
     - Fixed a bug that caused Quadro M2200 GPUs to enter the lowest available
       PowerMizer performance level when under load.
+    * Closes: #886470
 
   [ Andreas Beckmann ]
   * Support easier and consistent switching between GLVND/non-GLVND variants.
