--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ nvidia-graphics-drivers (384.111-1~svn1) UNRELEASED; urgency=medium
   * Update symbols files.
   * nvidia-kernel-dkms: add dependency to libelf-dev [amd64] to fix kernel
     modules builds failures due to new config used by the kernel.
+    Workaround for #886474
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Dec 2017 20:15:00 +0100
 
