--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ nvidia-graphics-drivers (384.111-1~svn1) UNRELEASED; urgency=medium
   * nvidia-kernel-dkms: add dependency to libelf-dev [amd64] to fix kernel
     modules builds failures due to new config used by the kernel.
     Workaround for #886474
+  * Update German debconf translation. Thank you Holger Wansing!
+    (Closes: #885925)
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Dec 2017 20:15:00 +0100
 
