--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,8 @@ nvidia-graphics-drivers (384.111-1~svn1) UNRELEASED; urgency=medium
     Workaround for #886474
   * Update German debconf translation. Thank you Holger Wansing!
     (Closes: #885925)
+  * Update Russian debconf translation. Thank you Lev Lamberov!
+    (Closes: #886005)
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Dec 2017 20:15:00 +0100
 
