--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -2,19 +2,20 @@
 # This file is distributed under the same license as the nvidia-driver package.
 #
 # Yuri Kozlov <yuray@komyakino.ru>, 2012.
+# Lev Lamberov <dogsleg@debian.org>, 2018.
 msgid ""
 msgstr ""
 "Project-Id-Version: nvidia-graphics-drivers\n"
 "Report-Msgid-Bugs-To: nvidia-graphics-drivers@packages.debian.org\n"
 "POT-Creation-Date: 2016-02-12 01:57+0100\n"
-"PO-Revision-Date: 2012-09-21 19:28+0400\n"
-"Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
+"PO-Revision-Date: 2018-01-01 18:31+0500\n"
+"Last-Translator: Lev Lamberov <dogsleg@debian.org>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Poedit 2.0.5\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
@@ -61,6 +62,8 @@ msgstr ""
 msgid ""
 "Use the update-glx command to switch between different installed drivers."
 msgstr ""
+"Для переключения между разными установленными драйверами используйте команду "
+"update-glx."
 
 #. Type: boolean
 #. Description
@@ -69,5 +72,5 @@ msgid ""
 "Before the ${free_name} driver can be used you must remove ${vendor} "
 "configuration from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Перед тем, как использовать драйвер ${free_name}, вам нужно удалить "
-"настройку ${vendor} из xorg.conf (и xorg.conf.d/)."
+"Перед тем как использовать драйвер ${free_name}, вам нужно удалить настройку "
+"${vendor} из xorg.conf (и xorg.conf.d/)."
