Add timer.patch to fix kmod build on 4.15
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7746 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ nvidia-graphics-drivers (340.104-1~svn4deb8jessie) UNRELEASED; urgency=medium
   * Refresh vm-fault.patch to remove fuzz from upstream changes.
   * Add nvidia-drm-pci-init.patch to fix kernel module build on Linux 4.14
     and newer.
+  * Add timer.patch to fix kernel module build on Linux 4.15 and newer.
 
   [ Russ Allbery ]
   * Remove myself from Uploaders.
