--- a/debian/changelog
+++ b/debian/changelog
@@ -21,12 +21,12 @@ nvidia-graphics-drivers (340.104-1~svn4deb9stretch) UNRELEASED; urgency=medium
   * disable-preempt_rt_sanity_check.patch: Remove, unsupported upstream.
   * build-module-packages.sh: Skip PREEMPT_RT (*-rt-*) kernels, unsupported
     upstream (375.82-2).
-  * Bump Standards-Version to 4.1.1. No changes needed.
+  * Bump Standards-Version to 4.1.3. No changes needed.
   * nvidia-alternative: Explicitly use interest-await triggers (375.82-2).
   * Switch from dh_install --list-missing to dh_missing (375.82-2).
   * Use dpkg makefile snippets instead of manual changelog parsing (375.82-2).
   * Simplify upstream changelog handling (375.82-5).
-  * Add #tls# substitution for the tls/ source directory.
+  * Add #tls# substitution for the tls/ source directory (384.111-1).
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 03:48:48 +0200
 
