--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (387.34-3) UNRELEASED; urgency=medium
+
+  [ Luca Boccassi ]
+  * Add timer.patch to fix kernel module build on Linux 4.15 and newer.
+
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 11 Jan 2018 00:48:43 +0100
+
 nvidia-graphics-drivers (387.34-2) experimental; urgency=medium
 
   * Support easier and consistent switching between GLVND/non-GLVND variants.
